# statslogger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  release.sh
src/: filelogging.rs  hash.rs  httplogging.rs  main.rs  stats.rs
