[package]
name = "statslogger"
description = "Tool to log system stats to stdout or a file"
version = "0.4.0"
authors = ["Chris Atkin <atkinchris@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
chrono = "0.4.9"
clap = "2.33.0"
sysinfo = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
whoami = "0.8.1"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
